plugins {
  id 'java'
  id 'org.openjfx.javafxplugin'
  id 'application'
}

group = 'com.pnambic.depanfx'
sourceCompatibility = '17'

repositories {
  // Use Maven Central for resolving dependencies.
  mavenCentral()
}

javafx {
  version = "20"
  modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dependencies {
  // Use JUnit Jupiter for testing.git
  // testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"

  // This dependency is used by the application.
  implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
  implementation files('lib/jogamp-fat.jar')
  implementation "com.google.guava:guava:${guavaVersion}"
}

tasks.named('test') {
  // Use JUnit Platform for unit tests.
   useJUnitPlatform()
}

application {
  applicationName = "JavaFX et JOGL"
  mainClass = "com.pnambic.depanfx.jogldemo.JoglDemo"
  applicationDefaultJvmArgs= [
    '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
    '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
    '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
    '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED' ]
}
